DLP/bin/y.output
   0  $accept : programa $end

   1  programa : listaDeclaraciones

   2  listaDeclaraciones :
   3                     | listaDeclaraciones declaracion

   4  declaracion : declaracionVariable
   5              | declaracionFuncion
   6              | declaracionProcedimiento
   7              | declaracionStruct

   8  declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'

   9  declaracionStruct : TYPE IDENT listaDeclaracionesCampo END TYPE ';'

  10  declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END PROC ';'

  11  declaracionVariable : DIM IDENT AS tipo ';'
  12                      | DIM IDENT listaDimensiones AS tipo ';'

  13  declaracionCampo : IDENT AS tipo ';'
  14                   | IDENT listaDimensiones AS tipo ';'

  15  listaDimensiones : '[' CTE_ENTERA ']'
  16                   | listaDimensiones '[' CTE_ENTERA ']'

  17  listaDeclaracionesVariable :
  18                             | listaDeclaracionesVariable declaracionVariable

  19  listaDeclaracionesCampo :
  20                          | listaDeclaracionesCampo declaracionCampo

  21  listaSentencias :
  22                  | listaSentencias sentencia

  23  sentencia : PRINT expresion ';'
  24            | WHILE expresion DO listaSentencias END WHILE ';'
  25            | IF expresion THEN listaSentencias ELSE listaSentencias END IF ';'
  26            | IF expresion THEN listaSentencias END IF ';'
  27            | RETURN expresion ';'
  28            | RETURN ';'
  29            | IDENT '(' parametrosLlamada ')' ';'
  30            | READ expresion ';'
  31            | expresion '=' expresion ';'

  32  parametrosLlamada :
  33                    | parametroLlamada

  34  parametroLlamada : expresion
  35                   | parametroLlamada ',' expresion

  36  parametrosFuncion :
  37                    | parametroFuncion

  38  parametroFuncion : IDENT AS tipo
  39                   | parametroFuncion ',' IDENT AS tipo

  40  expresion : CTE_ENTERA
  41            | CTE_CHAR
  42            | CTE_REAL
  43            | expresion '+' expresion
  44            | expresion '-' expresion
  45            | expresion '*' expresion
  46            | expresion '/' expresion
  47            | expresion '>' expresion
  48            | expresion '<' expresion
  49            | expresion MAYORIGUAL expresion
  50            | expresion MENORIGUAL expresion
  51            | expresion AND expresion
  52            | expresion OR expresion
  53            | expresion DISTINTO expresion
  54            | expresion IGUAL expresion
  55            | expresion listaDimensionesAcceso
  56            | expresion '.' IDENT
  57            | '(' expresion ')'
  58            | IDENT '(' parametrosLlamada ')'
  59            | CTYPE '(' tipo ',' expresion ')'
  60            | IDENT
  61            | NOT expresion
  62            | '-' expresion

  63  listaDimensionesAcceso : '[' expresion ']'
  64                         | listaDimensionesAcceso '[' expresion ']'

  65  tipo : INTEGER
  66       | CHARACTER
  67       | REAL
  68       | IDENT

state 0
	$accept : . programa $end  (0)
	listaDeclaraciones : .  (2)

	.  reduce 2

	programa  goto 1
	listaDeclaraciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : listaDeclaraciones .  (1)
	listaDeclaraciones : listaDeclaraciones . declaracion  (3)

	DIM  shift 3
	FUNCTION  shift 4
	PROC  shift 5
	TYPE  shift 6
	$end  reduce 1

	declaracion  goto 7
	declaracionVariable  goto 8
	declaracionFuncion  goto 9
	declaracionProcedimiento  goto 10
	declaracionStruct  goto 11


state 3
	declaracionVariable : DIM . IDENT AS tipo ';'  (11)
	declaracionVariable : DIM . IDENT listaDimensiones AS tipo ';'  (12)

	IDENT  shift 12
	.  error


state 4
	declaracionFuncion : FUNCTION . IDENT '(' parametrosFuncion ')' AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)

	IDENT  shift 13
	.  error


state 5
	declaracionProcedimiento : PROC . IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END PROC ';'  (10)

	IDENT  shift 14
	.  error


state 6
	declaracionStruct : TYPE . IDENT listaDeclaracionesCampo END TYPE ';'  (9)

	IDENT  shift 15
	.  error


state 7
	listaDeclaraciones : listaDeclaraciones declaracion .  (3)

	.  reduce 3


state 8
	declaracion : declaracionVariable .  (4)

	.  reduce 4


state 9
	declaracion : declaracionFuncion .  (5)

	.  reduce 5


state 10
	declaracion : declaracionProcedimiento .  (6)

	.  reduce 6


state 11
	declaracion : declaracionStruct .  (7)

	.  reduce 7


state 12
	declaracionVariable : DIM IDENT . AS tipo ';'  (11)
	declaracionVariable : DIM IDENT . listaDimensiones AS tipo ';'  (12)

	AS  shift 16
	'['  shift 17
	.  error

	listaDimensiones  goto 18


state 13
	declaracionFuncion : FUNCTION IDENT . '(' parametrosFuncion ')' AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)

	'('  shift 19
	.  error


state 14
	declaracionProcedimiento : PROC IDENT . '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END PROC ';'  (10)

	'('  shift 20
	.  error


state 15
	declaracionStruct : TYPE IDENT . listaDeclaracionesCampo END TYPE ';'  (9)
	listaDeclaracionesCampo : .  (19)

	.  reduce 19

	listaDeclaracionesCampo  goto 21


state 16
	declaracionVariable : DIM IDENT AS . tipo ';'  (11)

	INTEGER  shift 22
	REAL  shift 23
	CHARACTER  shift 24
	IDENT  shift 25
	.  error

	tipo  goto 26


state 17
	listaDimensiones : '[' . CTE_ENTERA ']'  (15)

	CTE_ENTERA  shift 27
	.  error


state 18
	declaracionVariable : DIM IDENT listaDimensiones . AS tipo ';'  (12)
	listaDimensiones : listaDimensiones . '[' CTE_ENTERA ']'  (16)

	AS  shift 28
	'['  shift 29
	.  error


state 19
	declaracionFuncion : FUNCTION IDENT '(' . parametrosFuncion ')' AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)
	parametrosFuncion : .  (36)

	IDENT  shift 30
	')'  reduce 36

	parametrosFuncion  goto 31
	parametroFuncion  goto 32


state 20
	declaracionProcedimiento : PROC IDENT '(' . parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END PROC ';'  (10)
	parametrosFuncion : .  (36)

	IDENT  shift 30
	')'  reduce 36

	parametrosFuncion  goto 33
	parametroFuncion  goto 32


state 21
	declaracionStruct : TYPE IDENT listaDeclaracionesCampo . END TYPE ';'  (9)
	listaDeclaracionesCampo : listaDeclaracionesCampo . declaracionCampo  (20)

	IDENT  shift 34
	END  shift 35
	.  error

	declaracionCampo  goto 36


state 22
	tipo : INTEGER .  (65)

	.  reduce 65


state 23
	tipo : REAL .  (67)

	.  reduce 67


state 24
	tipo : CHARACTER .  (66)

	.  reduce 66


state 25
	tipo : IDENT .  (68)

	.  reduce 68


state 26
	declaracionVariable : DIM IDENT AS tipo . ';'  (11)

	';'  shift 37
	.  error


state 27
	listaDimensiones : '[' CTE_ENTERA . ']'  (15)

	']'  shift 38
	.  error


state 28
	declaracionVariable : DIM IDENT listaDimensiones AS . tipo ';'  (12)

	INTEGER  shift 22
	REAL  shift 23
	CHARACTER  shift 24
	IDENT  shift 25
	.  error

	tipo  goto 39


state 29
	listaDimensiones : listaDimensiones '[' . CTE_ENTERA ']'  (16)

	CTE_ENTERA  shift 40
	.  error


state 30
	parametroFuncion : IDENT . AS tipo  (38)

	AS  shift 41
	.  error


state 31
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion . ')' AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)

	')'  shift 42
	.  error


state 32
	parametrosFuncion : parametroFuncion .  (37)
	parametroFuncion : parametroFuncion . ',' IDENT AS tipo  (39)

	','  shift 43
	')'  reduce 37


state 33
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion . ')' listaDeclaracionesVariable listaSentencias END PROC ';'  (10)

	')'  shift 44
	.  error


state 34
	declaracionCampo : IDENT . AS tipo ';'  (13)
	declaracionCampo : IDENT . listaDimensiones AS tipo ';'  (14)

	AS  shift 45
	'['  shift 17
	.  error

	listaDimensiones  goto 46


state 35
	declaracionStruct : TYPE IDENT listaDeclaracionesCampo END . TYPE ';'  (9)

	TYPE  shift 47
	.  error


state 36
	listaDeclaracionesCampo : listaDeclaracionesCampo declaracionCampo .  (20)

	.  reduce 20


state 37
	declaracionVariable : DIM IDENT AS tipo ';' .  (11)

	.  reduce 11


state 38
	listaDimensiones : '[' CTE_ENTERA ']' .  (15)

	.  reduce 15


state 39
	declaracionVariable : DIM IDENT listaDimensiones AS tipo . ';'  (12)

	';'  shift 48
	.  error


state 40
	listaDimensiones : listaDimensiones '[' CTE_ENTERA . ']'  (16)

	']'  shift 49
	.  error


state 41
	parametroFuncion : IDENT AS . tipo  (38)

	INTEGER  shift 22
	REAL  shift 23
	CHARACTER  shift 24
	IDENT  shift 25
	.  error

	tipo  goto 50


state 42
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' . AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)

	AS  shift 51
	.  error


state 43
	parametroFuncion : parametroFuncion ',' . IDENT AS tipo  (39)

	IDENT  shift 52
	.  error


state 44
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' . listaDeclaracionesVariable listaSentencias END PROC ';'  (10)
	listaDeclaracionesVariable : .  (17)

	.  reduce 17

	listaDeclaracionesVariable  goto 53


state 45
	declaracionCampo : IDENT AS . tipo ';'  (13)

	INTEGER  shift 22
	REAL  shift 23
	CHARACTER  shift 24
	IDENT  shift 25
	.  error

	tipo  goto 54


state 46
	declaracionCampo : IDENT listaDimensiones . AS tipo ';'  (14)
	listaDimensiones : listaDimensiones . '[' CTE_ENTERA ']'  (16)

	AS  shift 55
	'['  shift 29
	.  error


state 47
	declaracionStruct : TYPE IDENT listaDeclaracionesCampo END TYPE . ';'  (9)

	';'  shift 56
	.  error


state 48
	declaracionVariable : DIM IDENT listaDimensiones AS tipo ';' .  (12)

	.  reduce 12


state 49
	listaDimensiones : listaDimensiones '[' CTE_ENTERA ']' .  (16)

	.  reduce 16


state 50
	parametroFuncion : IDENT AS tipo .  (38)

	.  reduce 38


state 51
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' AS . tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)

	INTEGER  shift 22
	REAL  shift 23
	CHARACTER  shift 24
	IDENT  shift 25
	.  error

	tipo  goto 57


state 52
	parametroFuncion : parametroFuncion ',' IDENT . AS tipo  (39)

	AS  shift 58
	.  error


state 53
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable . listaSentencias END PROC ';'  (10)
	listaDeclaracionesVariable : listaDeclaracionesVariable . declaracionVariable  (18)
	listaSentencias : .  (21)

	DIM  shift 3
	CTE_ENTERA  reduce 21
	CTE_REAL  reduce 21
	CTE_CHAR  reduce 21
	IDENT  reduce 21
	PRINT  reduce 21
	IF  reduce 21
	WHILE  reduce 21
	RETURN  reduce 21
	END  reduce 21
	READ  reduce 21
	NOT  reduce 21
	CTYPE  reduce 21
	'-'  reduce 21
	'('  reduce 21

	declaracionVariable  goto 59
	listaSentencias  goto 60


state 54
	declaracionCampo : IDENT AS tipo . ';'  (13)

	';'  shift 61
	.  error


state 55
	declaracionCampo : IDENT listaDimensiones AS . tipo ';'  (14)

	INTEGER  shift 22
	REAL  shift 23
	CHARACTER  shift 24
	IDENT  shift 25
	.  error

	tipo  goto 62


state 56
	declaracionStruct : TYPE IDENT listaDeclaracionesCampo END TYPE ';' .  (9)

	.  reduce 9


state 57
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' AS tipo . listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)
	listaDeclaracionesVariable : .  (17)

	.  reduce 17

	listaDeclaracionesVariable  goto 63


state 58
	parametroFuncion : parametroFuncion ',' IDENT AS . tipo  (39)

	INTEGER  shift 22
	REAL  shift 23
	CHARACTER  shift 24
	IDENT  shift 25
	.  error

	tipo  goto 64


state 59
	listaDeclaracionesVariable : listaDeclaracionesVariable declaracionVariable .  (18)

	.  reduce 18


state 60
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias . END PROC ';'  (10)
	listaSentencias : listaSentencias . sentencia  (22)

	CTE_ENTERA  shift 65
	CTE_REAL  shift 66
	CTE_CHAR  shift 67
	IDENT  shift 68
	PRINT  shift 69
	IF  shift 70
	WHILE  shift 71
	RETURN  shift 72
	END  shift 73
	READ  shift 74
	NOT  shift 75
	CTYPE  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	sentencia  goto 79
	expresion  goto 80


state 61
	declaracionCampo : IDENT AS tipo ';' .  (13)

	.  reduce 13


state 62
	declaracionCampo : IDENT listaDimensiones AS tipo . ';'  (14)

	';'  shift 81
	.  error


state 63
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' AS tipo listaDeclaracionesVariable . listaSentencias END FUNCTION ';'  (8)
	listaDeclaracionesVariable : listaDeclaracionesVariable . declaracionVariable  (18)
	listaSentencias : .  (21)

	DIM  shift 3
	CTE_ENTERA  reduce 21
	CTE_REAL  reduce 21
	CTE_CHAR  reduce 21
	IDENT  reduce 21
	PRINT  reduce 21
	IF  reduce 21
	WHILE  reduce 21
	RETURN  reduce 21
	END  reduce 21
	READ  reduce 21
	NOT  reduce 21
	CTYPE  reduce 21
	'-'  reduce 21
	'('  reduce 21

	declaracionVariable  goto 59
	listaSentencias  goto 82


state 64
	parametroFuncion : parametroFuncion ',' IDENT AS tipo .  (39)

	.  reduce 39


state 65
	expresion : CTE_ENTERA .  (40)

	.  reduce 40


state 66
	expresion : CTE_REAL .  (42)

	.  reduce 42


state 67
	expresion : CTE_CHAR .  (41)

	.  reduce 41


state 68
	sentencia : IDENT . '(' parametrosLlamada ')' ';'  (29)
	expresion : IDENT . '(' parametrosLlamada ')'  (58)
	expresion : IDENT .  (60)

	'('  shift 83
	MAYORIGUAL  reduce 60
	MENORIGUAL  reduce 60
	IGUAL  reduce 60
	AND  reduce 60
	OR  reduce 60
	DISTINTO  reduce 60
	'='  reduce 60
	'>'  reduce 60
	'<'  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	'*'  reduce 60
	'/'  reduce 60
	'['  reduce 60
	'.'  reduce 60


state 69
	sentencia : PRINT . expresion ';'  (23)

	CTE_ENTERA  shift 65
	CTE_REAL  shift 66
	CTE_CHAR  shift 67
	IDENT  shift 84
	NOT  shift 75
	CTYPE  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	expresion  goto 85


state 70
	sentencia : IF . expresion THEN listaSentencias ELSE listaSentencias END IF ';'  (25)
	sentencia : IF . expresion THEN listaSentencias END IF ';'  (26)

	CTE_ENTERA  shift 65
	CTE_REAL  shift 66
	CTE_CHAR  shift 67
	IDENT  shift 84
	NOT  shift 75
	CTYPE  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	expresion  goto 86


state 71
	sentencia : WHILE . expresion DO listaSentencias END WHILE ';'  (24)

	CTE_ENTERA  shift 65
	CTE_REAL  shift 66
	CTE_CHAR  shift 67
	IDENT  shift 84
	NOT  shift 75
	CTYPE  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	expresion  goto 87


state 72
	sentencia : RETURN . expresion ';'  (27)
	sentencia : RETURN . ';'  (28)

	CTE_ENTERA  shift 65
	CTE_REAL  shift 66
	CTE_CHAR  shift 67
	IDENT  shift 84
	NOT  shift 75
	CTYPE  shift 76
	'-'  shift 77
	'('  shift 78
	';'  shift 88
	.  error

	expresion  goto 89


state 73
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END . PROC ';'  (10)

	PROC  shift 90
	.  error


state 74
	sentencia : READ . expresion ';'  (30)

	CTE_ENTERA  shift 65
	CTE_REAL  shift 66
	CTE_CHAR  shift 67
	IDENT  shift 84
	NOT  shift 75
	CTYPE  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	expresion  goto 91


state 75
	expresion : NOT . expresion  (61)

	CTE_ENTERA  shift 65
	CTE_REAL  shift 66
	CTE_CHAR  shift 67
	IDENT  shift 84
	NOT  shift 75
	CTYPE  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	expresion  goto 92


state 76
	expresion : CTYPE . '(' tipo ',' expresion ')'  (59)

	'('  shift 93
	.  error


state 77
	expresion : '-' . expresion  (62)

	CTE_ENTERA  shift 65
	CTE_REAL  shift 66
	CTE_CHAR  shift 67
	IDENT  shift 84
	NOT  shift 75
	CTYPE  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	expresion  goto 94


state 78
	expresion : '(' . expresion ')'  (57)

	CTE_ENTERA  shift 65
	CTE_REAL  shift 66
	CTE_CHAR  shift 67
	IDENT  shift 84
	NOT  shift 75
	CTYPE  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	expresion  goto 95


state 79
	listaSentencias : listaSentencias sentencia .  (22)

	.  reduce 22


state 80
	sentencia : expresion . '=' expresion ';'  (31)
	expresion : expresion . '+' expresion  (43)
	expresion : expresion . '-' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '>' expresion  (47)
	expresion : expresion . '<' expresion  (48)
	expresion : expresion . MAYORIGUAL expresion  (49)
	expresion : expresion . MENORIGUAL expresion  (50)
	expresion : expresion . AND expresion  (51)
	expresion : expresion . OR expresion  (52)
	expresion : expresion . DISTINTO expresion  (53)
	expresion : expresion . IGUAL expresion  (54)
	expresion : expresion . listaDimensionesAcceso  (55)
	expresion : expresion . '.' IDENT  (56)

	MAYORIGUAL  shift 96
	MENORIGUAL  shift 97
	IGUAL  shift 98
	AND  shift 99
	OR  shift 100
	DISTINTO  shift 101
	'='  shift 102
	'>'  shift 103
	'<'  shift 104
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'['  shift 109
	'.'  shift 110
	.  error

	listaDimensionesAcceso  goto 111


state 81
	declaracionCampo : IDENT listaDimensiones AS tipo ';' .  (14)

	.  reduce 14


state 82
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' AS tipo listaDeclaracionesVariable listaSentencias . END FUNCTION ';'  (8)
	listaSentencias : listaSentencias . sentencia  (22)

	CTE_ENTERA  shift 65
	CTE_REAL  shift 66
	CTE_CHAR  shift 67
	IDENT  shift 68
	PRINT  shift 69
	IF  shift 70
	WHILE  shift 71
	RETURN  shift 72
	END  shift 112
	READ  shift 74
	NOT  shift 75
	CTYPE  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	sentencia  goto 79
	expresion  goto 80


state 83
	sentencia : IDENT '(' . parametrosLlamada ')' ';'  (29)
	expresion : IDENT '(' . parametrosLlamada ')'  (58)
	parametrosLlamada : .  (32)
